--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "pretty": "prettier '**/*.{js, json}' --write ",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "author": "Grayson Orr",
   "license": "MIT",
   "dependencies": {
     "colors": "^1.3.3",
     "convert-csv-to-json": "0.0.14",
+    "coveralls": "^3.0.6",
     "csv-parser": "^2.2.0",
     "fast-csv": "^2.5.0",
     "fs": "0.0.1-security",
@@ -20,6 +25,7 @@
     "nodejs-nodemailer-outlook": "^1.2.1",
     "pdfkit": "^0.9.1",
     "pdfmerge": "^1.0.2",
+    "prettier": "^1.18.2",
     "shelljs": "^0.8.3",
     "zip-local": "^0.3.4"
   }
