--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+#
+# @version 0.5.0
+# @author [Grayson Orr](https://github.com/grayson-orr)
+#
+
 sudo: false
 
 language: node_js
@@ -11,3 +16,4 @@ script:
 
 notifications:
   email: false
+
