--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ language: node_js
 node_js:
   - node
 
-script:
+before_script:
+  - npm install
   - npm run pretty
+
+script:
   - npm run test:coveralls
 
 notifications:
