--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "convert-csv-to-json": "0.0.15",
     "coveralls": "^3.0.6",
     "csv-parser": "^2.3.1",
-    "fast-csv": "^2.5.0",
-    "fs": "0.0.1-security",
+    "dropbox-v2-api": "^2.4.6",
+    "glob": "^7.1.4",
     "inquirer": "^7.0.0",
     "jest": "^24.9.0",
     "node-cron": "^2.0.3",
