--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "pretty": "prettier '**/*.{js, json}' --write ",
+    "generate": "node generate.js prog-four-grades.csv && node generate.js web-one-grades.csv",
+    "pretty": "prettier '**/*.{js, json}' --write",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
