--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "web-one-generate": "cd graphs; python checkpoint_graph.py web-one-grades.json; python assignment_graph.py web-one-grades.json; cd ..; node generate.js web-one-grades.csv",
+    "web-one-generate": "cd graphs; python checkpoint_graph.py web-one-grades.json; python assignment_average_all_graph.py web-one-grades.json; cd ..; node generate.js web-one-grades.csv",
     "generate": "node generate.js prog-four-grades.csv && node generate.js web-one-grades.csv",
     "pretty": "prettier '**/*.{js, json}' --write",
     "test": "jest",
