--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -2,9 +2,5 @@ version: 1
 
 update_configs:
   - package_manager: "javascript"
-    directory: "/npm_and_yarn/helpers"
-    update_schedule: "live"
-
-  - package_manager: "python"
-    directory: "/python/helpers"
+    directory: "/"
     update_schedule: "live"
