--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -4,3 +4,10 @@ update_configs:
   - package_manager: "javascript"
     directory: "/"
     update_schedule: "live"
+    target_branch: "master"
+    default_labels:
+      - "dependencies"
+      - "dependabot"
+    allowed_updates:
+      - match:
+          update_type: "all"
