--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -2,7 +2,7 @@ version: 1
 
 update_configs:
   - package_manager: "javascript"
-    directory: "/"
+    directory: "/dependabot/npm_and_year"
     update_schedule: "live"
     target_branch: "master"
     default_labels:
